# openAV-Fabla2

./: .gitignore  CMakeLists.txt  README.md  meson.build  test_ui.cxx  updateAvtk.sh
avtk/: box.hxx  button.cxx  button.hxx  common.hxx  dial.cxx  envelope.hxx  filebrowser.hxx  group.cxx  group.hxx  helpers.cxx  helpers.hxx  image.hxx  midi.cxx  midi.hxx  number.cxx  number.hxx  scroll.cxx  slider.cxx  spectrum.hxx  tester.cxx  tester.hxx  text.hxx  theme.cxx  themes.hxx  ui.cxx  waveform.cxx  widget.cxx  widget.hxx
docs/: Doxyfile
src/: dsp.cxx  dsp.hxx  fabla2.ttl  lv2_messaging.hxx  lv2_state.cxx  lv2_state.hxx  lv2_work.cxx  lv2_work.hxx  manifest.ttl  meson.build  profiny.hxx  shared.hxx  ui.cxx
src/dsp/: bank.cxx  bank.hxx  dsp_adsr.cxx  dsp_adsr.hxx  dsp_dbmeter.hxx  dsp_filters_svf.hxx  fabla2.cxx  fabla2.hxx  library.cxx  library.hxx  meson.build  midi.hxx  midi_helper.hxx  pad.cxx  pad.hxx  pattern.cxx  pattern.hxx  plotter.hxx  ports.hxx  sample.cxx  sample.hxx  sampler.cxx  sampler.hxx  sequencer.c  voice.cxx  voice.hxx
src/dsp/staticKit/: kit.hxx
src/dsp/tests/: main.cxx  qunit.hxx  sampler.cxx
src/ui/: fabla2_ui.cxx  fabla2_ui.hxx  fader.cxx  fader.hxx  header.c  header_fabla.c  header_openav.c  helper.hxx  mixstrip.cxx  mixstrip.hxx  pad.cxx  pad.hxx  step.cxx  step.hxx  test_ui.cxx  test_ui.hxx  volume.cxx  volume.hxx  writer.hxx
src/ui/avtk/: README.md  button.cxx  main.cxx  test_ui.cxx  test_ui.hxx  theme.hxx  utils.cxx
src/ui/avtk/avtk/: avtk.hxx  box.cxx  button.cxx  common.cxx  dial.hxx  dialog.cxx  dialog.hxx  envelope.cxx  eventeditor.cxx  eventeditor.hxx  filebrowser.cxx  image.cxx  list.cxx  list.hxx  listitem.cxx  listitem.hxx  scroll.cxx  scroll.hxx  slider.hxx  spectrum.cxx  text.cxx  theme.cxx  theme.hxx  themes.hxx  ui.cxx  ui.hxx  utils.cxx  utils.hxx  waveform.cxx  waveform.hxx  widget.cxx  widget.hxx
src/ui/avtk/avtk/pugl/: pugl_x11.c
src/ui/avtk/libs/: audioGen.hxx
src/ui/avtk/lv2/: testUi.cxx
src/ui/oscpkt/: oscpkt.hh  udp.hh
src/ui/sofd/: libsofd.c  libsofd.h
src/ui/themes/: red.avtk
tools/: fabla2kit_fromSFZ.py
